--- a/index.html
+++ b/index.html
@@ -137,41 +137,20 @@
                 <div class="timeline-item">
                     <div class="timeline-marker"></div>
                     <div class="job-header">
-                        <span class="job-title">Software Engineering Intern <span class="company-name">@ StartUp Inc</span></span>
+                        <span class="job-title">KOI Barista <span class="company-name">@ KOI The Singapore Pte Ltd</span></span>
                     </div>
-                    <div class="job-date">May 2025 - Present</div>
+                    <div class="job-date">November 2024 - June 2025</div>
                     <ul class="job-desc">
-                        <li>Developed and maintained code for client websites using HTML, CSS, Sass, and JavaScript.</li>
-                        <li>Collaborated with the design team to ensure pixel-perfect implementation of UI/UX designs.</li>
-                        <li>Participated in code reviews and learned Agile methodologies.</li>
+                        <li>Delivered friendly and efficient customer service during peak hours, helping to maintain short waiting times</li>
+                        <li>Prepared a variety of beverages according to KOI standards, ensuring consistent quality and presentation</li>
+                        <li>Handled cash and POS transactions accurately, ensuring correct billing and cash handling procedures</li>
+                        <li>Maintained cleanliness and hygiene of the workstation in compliance with food safety standards</li>
+
                     </ul>
                 </div>
 
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="job-header">
-                        <span class="job-title">Teaching Assistant <span class="company-name">@ University</span></span>
-                    </div>
-                    <div class="job-date">Sept 2024 - Dec 2024</div>
-                    <ul class="job-desc">
-                        <li>Assisted 50+ students with Python programming concepts and debugging assignments.</li>
-                        <li>Held weekly office hours to review course material and proctored exams.</li>
-                    </ul>
                 </div>
-
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="job-header">
-                        <span class="job-title">Technical Lead <span class="company-name">@ Coding Club</span></span>
-                    </div>
-                    <div class="job-date">Jan 2024 - May 2024</div>
-                    <ul class="job-desc">
-                        <li>Organized a university-wide hackathon with over 200 participants.</li>
-                        <li>Built the event landing page and managed registration data using SQL.</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
+                </section>
 
         <footer style="text-align: center; padding: 20px; font-family: var(--font-mono); font-size: 12px; color: var(--text-secondary);">
             <p>Built by Charlisa Tan</p>
