--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#projects"><span style="color:var(--accent-color)">02.</span> Projects</a>
             <a href="#experience"><span style="color:var(--accent-color)">03.</span> Experience</a>
             <a href="assets/Resume_TanYuEnCharlisa.pdf" class="resume-btn" download="Charlisa_Tan_Resume.pdf">Resume</a>
+            <a href ="assets/Testimonial_TanYuEnCharlisa.pdf" class  ="resume-btn" download="Charlisa_Tan_Testimonial.pdf">Testimonial</a>
         </div>
     </nav>
 
@@ -105,7 +106,7 @@
                         <svg class="folder-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 7v10a2 2 0 002 2h14a2 2 0 002-2V9a2 2 0 00-2-2h-6l-2-2H5a2 2 0 00-2 2z"></path></svg>
                         <a href="https://github.com/charlisaa/ux-assignment-2">↗</a>
                     </div>
-                    <h3>UX Design (Change into your company name)</h3>
+                    <h3>UX Design</h3>
                     <p>Designed and developed a responsive website to market a School CCA Club. Focusing on User Experience (UX) principles, the site utilizes Bootstrap 5 for consistent layout across devices, accessible navigation, and interactive JavaScript elements to streamline the new member sign-up process.</p>
                     <div class="card-tech">
                         <span>JavaScript</span>
@@ -144,10 +145,13 @@
                     <div class="job-date">November 2024 - June 2025
                     </div>
                     <ul class="job-desc">
-                        <li>Prepared a variety of beverages according to KOI standards, ensuring consistent quality and presentation.</li>
-                        <li>Delivered friendly and efficient customer service during peak hours, helping to maintain short waiting times.</li>
-                        <li>Handled cash and POS transactions accurately, ensuring correct billing and cash handling procedures.</li>
-                        <li>Maintained cleanliness and hygiene of the workstation in compliance with food safety standards.</li>
+                        <li>Delivered warm, attentive customer service by engaging with customers, understanding their preferences, and recommending suitable beverages</li>
+                        <li>Ensured a positive customer experience during peak hours by managing orders efficiently and minimizing waiting time.</li>
+                        <li>Handled cash and POS transactions accurately while maintaining a friendly and professional interaction with customers.</li>
+                        <li>Addressed customer enquiries and resolved minor concerns promptly to ensure satisfaction.</li>
+                        <li>Maintained a clean and welcoming environment toprovide customers with a comfortable and enjoyable experience.</li>
+
+
                     </ul>
                 </div>
             </div>
